--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Juhudi",
+  "name": "Fundisha",
   "description": "A FFMpeg Wrapper inside @Telegram",
   "keywords": [
     "telegram",
